Generics for composite types (#23)
* Change name from ChiObject to ChiStaticObject

* Add ChiDynamicObject for generic composite types

* Remove StaticShape related code

* Fix some bugs with generic composite types

* Better message for errors in REPL