@@ -33,6 +33,7 @@ test {
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED',
+            '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.object=ALL-UNNAMED',
             "-Dtruffle.class.path.append=" + sourceSets.main.java.classesDirectory.get().asFile,
             "-Dgraalvm.locatorDisabled=true"
     ]
